--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,17 +23,19 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "konva": "^10.0.12",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
     "next": "16.0.7",
     "pdf-lib": "^1.17.1",
     "pdf-password": "^1.0.0",
-    "pdfjs-dist": "^5.4.394",
+    "pdfjs-dist": "^5.4.449",
     "pixelmatch": "^7.1.0",
     "pptxgenjs": "^4.0.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
+    "react-konva": "^19.2.1",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
