--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,13 +33,17 @@
     "pixelmatch": "^7.1.0",
     "pptxgenjs": "^4.0.1",
     "react": "19.2.1",
+    "react-color": "^2.19.3",
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-konva": "^19.2.1",
+    "react-tooltip": "^5.30.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -48,6 +52,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
