--- a/.github/workflows/security-and-tests.yml
+++ b/.github/workflows/security-and-tests.yml
@@ -1,85 +1,204 @@
-name: Security & Tests
+name: Security and Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop, ninja ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop, ninja ]
+  schedule:
+    - cron: '0 0 * * 0'  # Weekly security scan
 
 jobs:
-  backend-security:
+  security-scan:
+    name: Security Scan
     runs-on: ubuntu-latest
-    name: Backend tests & security
+    permissions:
+      contents: read
+      security-events: write
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
         with:
-          python-version: '3.11'
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
 
-      - name: Install Python deps
-        working-directory: ./backend
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+      - name: Run npm audit
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install bandit safety pip-audit
+          npm audit --audit-level=moderate || true
+        continue-on-error: true
 
-      - name: Run bandit
-        working-directory: ./backend
-        run: bandit -r apps core -x migrations -n 5 -lll
-
-      - name: Run safety
-        working-directory: ./backend
-        run: safety check -r requirements.txt --full-report || true
-
-      - name: Run pip-audit
-        working-directory: ./backend
-        run: pip-audit || true
-
-      - name: Run Django tests
-        working-directory: ./backend
-        env:
-          DJANGO_SETTINGS_MODULE: core.settings
+      - name: Check for known security issues
         run: |
-          python manage.py test --verbosity=2
+          npm audit --audit-level=high --json > npm-audit.json || true
+          if [ -s npm-audit.json ]; then
+            echo "Security vulnerabilities found. Please review npm-audit.json"
+          fi
+        continue-on-error: true
 
-  frontend-security:
+      - name: Upload npm audit results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: npm-audit-results
+          path: npm-audit.json
+          retention-days: 30
+
+  dependency-review:
+    name: Dependency Review
     runs-on: ubuntu-latest
-    name: Frontend tests & security
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: write
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
+        with:
+          fail-on-severity: moderate
+
+  secret-scanning:
+    name: Secret Scanning
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Node
+      - name: TruffleHog OSS
+        uses: trufflesecurity/trufflehog@main
+        with:
+          path: ./
+          extra_args: --debug --only-verified
+
+  unit-tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-      - name: Install pnpm
-        run: npm i -g pnpm
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Install deps
-        working-directory: ./frontend
-        run: pnpm install --frozen-lockfile || pnpm install
+      - name: Run tests
+        run: npm test
 
-      - name: Run TypeScript check
-        working-directory: ./frontend
-        run: pnpm exec tsc --noEmit
+      - name: Generate coverage report
+        run: npm run test:coverage || npm test -- --coverage
+        continue-on-error: true
 
-      - name: Run pnpm audit
-        working-directory: ./frontend
-        run: pnpm audit --json || true
-
-  secret-scan:
-    runs-on: ubuntu-latest
-    name: Secret scanning
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run TruffleHog secret scan
-        uses: trufflesecurity/secret-scan-action@v1
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        if: matrix.node-version == '20.x'
         with:
-          fail-on-secrets: true
+          name: coverage-reports
+          path: coverage/
+          retention-days: 30
+
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run integration tests
+        run: npm run test:integration || echo "No integration tests configured"
+        continue-on-error: true
+
+  build-test:
+    name: Build Test
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Verify build artifacts
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "Build directory not found"
+            exit 1
+          fi
+          echo "Build successful, artifacts created"
+
+  code-quality:
+    name: Code Quality
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run linter
+        run: npm run lint || echo "Linting not configured"
+        continue-on-error: true
+
+      - name: Check code formatting
+        run: npm run format:check || echo "Format check not configured"
+        continue-on-error: true
