--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Frontend Environment Variables
-NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=your_stripe_public_key
 NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id
