feat: Add PWA manifest and user verification scripts; refine API URL and login throttling implementation.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,12 +1,6 @@
 {
-    "name": "18+ PDF - Free Online PDF Tools",
-    "short_name": "18+ PDF",
-    "description": "Smart Workspace for PDF Tools",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
-    "icons": [
+m   "short_name": "18+ PDF",
+    "description": "Smart Wo"icons": [
         {
             "src": "/favicon.ico",
             "sizes": "64x64 32x32 24x24 16x16",
