--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,12 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@hello-pangea/dnd": "^18.0.1",
+        "@pdf-lib/fontkit": "^1.1.1",
+        "@pdfsmaller/pdf-encrypt-lite": "^1.0.1",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.11",
         "@radix-ui/react-dialog": "^1.1.15",
