--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,7 +63,8 @@
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
         "tesseract.js": "^6.0.1",
-        "uuid": "^13.0.0"
+        "uuid": "^13.0.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.3",
