--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
         "react-icons": "^5.5.0",
         "react-konva": "^19.2.1",
         "react-markdown": "^10.1.0",
+        "react-qr-code": "^2.0.18",
         "react-syntax-highlighter": "^16.1.0",
         "react-tooltip": "^5.30.0",
         "react-use-measure": "^2.1.7",
