--- a/18plus-pdf-backend/.gitignore
+++ b/18plus-pdf-backend/.gitignore
@@ -31,4 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Application Properties & Environment Files ###
 application.properties
+application-*.properties
+!application.properties.example
+.env
+.env.local
+*.log
