--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "docx-preview": "^0.3.7",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "framer-motion": "^12.23.24",
