--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
         "react-tooltip": "^5.30.0",
         "react-use-measure": "^2.1.7",
         "schema-dts": "^1.1.5",
+        "semantic-ui-react": "^2.1.5",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
         "tesseract.js": "^6.0.1",
